[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Daydream.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Enemy.gd" type="Script" id=2]
[ext_resource path="res://sound/explosion.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 16.0

[sub_resource type="DynamicFont" id=2]
size = 6
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -16, -5 ), Vector2( -16, 4 ) ]
}

[node name="enemy" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="collisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -3, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -16.0
margin_top = -4.0
margin_right = 10.0
margin_bottom = 5.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "-20"
align = 1
valign = 1

[node name="diePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/die = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_enemy_body_entered"]
[connection signal="finished" from="diePlayer" to="." method="_on_diePlayer_finished"]
